Optimize video listing with metadata projection
Introduces VideoProjection interface and updates VideoJpaRepository to use a new findAllMetadata query, loading only video metadata without BLOBs for improved performance. VideoService and VideoMapper are updated to support mapping from VideoProjection to domain objects. VideoId now supports Jackson serialization/deserialization.